web: Fix translate button margin too tall.

--- a/frontend/src/components/Chat.css
+++ b/frontend/src/components/Chat.css
@@ -55,6 +55,7 @@ div.message-righthand {
     display: flex;
     flex-grow: 1;
     justify-content: flex-end;
+    margin: auto;
 }
 
 .rightHandIcons {
